# gnfs

./: .gitignore  ADAPTIVE_ARCHITECTURE_DESIGN.md  ADAPTIVE_ARCHITECTURE_REPORT.md  ADAPTIVE_ARCHITECTURE_SUMMARY.md  BENCHMARK_RESULTS_2025-10-23.txt  BENCHMARK_SUMMARY.txt  CLAUDE.md  CPU_USAGE_INVESTIGATION.md  Cargo.toml  DISCREPANCIES.md  FIX_PLAN.md  GNFS_POLYNOMIAL_SELECTION_NOTES.md  IMPLEMENTATION_GUIDE.md  LICENSE  MONTGOMERY_RESEARCH_NOTES.md  OPTIMIZATION_SESSION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PARALLELIZATION_FIX.md  PARAMETER_OPTIMIZATION_REPORT.md  PARAMETER_SELECTION_RESEARCH_REPORT.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE4_BENCHMARK_CRITICAL_BUG.md  PHASE4_BENCHMARK_EXECUTIVE_SUMMARY.md  POLYNOMIAL_EXPONENTIATION_OPTIMIZATION.md  PROGRESS_SUMMARY.md  QS_PARAMETER_FIXES.md  README.md  RESEARCH_SUMMARY.md  SIGNED_BACKEND_IMPLEMENTATION_PLAN.md  SIQS_FAST_SWITCHING_PLAN.md  SIQS_IMPLEMENTATION_PLAN.md  SIQS_MVP_COMPLETE.md  SIQS_PHASE_2.1_COMPLETE.md  SIQS_PHASE_2.2_COMPLETE.md  SPARSE_MATRIX_VALIDATION.md  SQUARE_ROOT_INSTRUMENTATION.md  STAGE4_ISSUE.md  SUCCESS_SUMMARY.md  TIER1_OPTIMIZATION_RESULTS.md  VALIDATION_RESULTS.md  (+13 more)
143/: parameters.json  progress.json  smooth_relations.json
45113/: parameters.json  progress.json  smooth_relations.json
45115/: parameters.json  progress.json  smooth_relations.json
738883/: parameters.json  progress.json  smooth_relations.json
9876543/: parameters.json  progress.json  smooth_relations.json
src/: benchmark_cli.rs  lib.rs  main.rs  main_app_existing,.cs
src/Core/: backend_conversion.rs  bigint_wrapper.rs  cancellation_token.rs  count_dictionary.rs  cpu_info.rs  directory_location.rs  existing.cs  factor_base.rs  gnfs.rs  gnfs_integer.rs  gnfs_wrapper.rs  mod.rs  sieve_range.rs  solution.rs  static_random.rs
src/Factor/: factor_pair.rs  factor_pair_collection.rs  mod.rs
src/IntegerMath/: combinatorics.rs  factorization_factory.rs  gcd.rs  normal.rs  prime_factory.rs  quadratic_residue.rs
src/Matrix/: existing.cs  gaussian_matrix.rs  gaussian_row.rs  guassian_matrix.rs  guassian_row.rs  matrix_solve.rs  mod.rs  sparse_matrix.rs
src/Polynomial/: algorithms.rs  existing.md  field.rs  mod.rs  optimized_exp.rs  polynomial.rs  polynomial_construction.rs  polynomial_quality.rs
src/RelationSieve/: poly_relations_sieve_progress.rs  relation.rs  (+1 more)
tests/: end_to_end_tests.rs  relation_tests.rs  sieve_advancement_tests.rs  sieve_edge_cases_tests.rs  sieve_range_tests.rs  siqs_integration_test.rs
(+64 files in other folders)
