[package]
name = "gnfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#![recursion_limit = "256"]

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde_derive = "1.0.197"
serde = { version = "1.0.197", features = ["derive"] }
csv = "1.3.0"
rayon = "1.10.0"
memmap = "0.7.0"
chrono = {version = "0.4.37", features = ["serde"]}
glob = "0.3.1"
#num-bigint = "0.4.4"
num = "0.4.1"
rand = "0.8.5"
cache-size = "0.6.0"
rand_chacha = "0.3.1"


# Logging
flexi_logger = "0.28"
log = "0.4.21"
env_logger = "0.11.3"

# Data
#mysql = "25.0.0"
#mysql_async = "0.34.1"
serde_json = "1.0.115"

# Cloud

[profile.release]
opt-level = 3