[package]
name = "gnfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#![recursion_limit = "256"]

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde_derive = "1.0.228"
serde = { version = "1.0.228", features = ["derive"] }
csv = "1.4.0"
rayon = "1.11.0"
memmap = "0.7.0"
chrono = {version = "0.4.42", features = ["serde"]}
glob = "0.3.3"
num_cpus = "1.17"
#num-bigint = "0.4.4"
num = "0.4.3"
crypto-bigint = "0.5"
rand = "0.9.2"
cache-size = "0.7.0"
rand_chacha = "0.9.0"
bitvec = "1.0.1"
lazy_static = "1.5.0"

# Logging
flexi_logger = "0.31.7"
log = "0.4.28"
env_logger = "0.11.8"

# Data
#mysql = "25.0.0"
#mysql_async = "0.34.1"
serde_json = "1.0.145"

# Cloud

# Benchmarking
sysinfo = "0.32.0"
git2 = "0.19.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# [[bench]]
# name = "benchmarks"
# harness = false

[profile.release]
opt-level = 3

[profile.bench]
inherits = "release"